# voxel-engine

./: .gitignore  CMakeLists.txt  README.md
src/: application.cpp  application.h  camera.h  chunk.cpp  chunk.h  main.cpp  texture.cpp  texture.h  world.cpp  world.h
src/core/: application.cpp  application.h  main.cpp
src/graphics/: shader.h  texture.cpp
src/shaders/: 3.3.shader.fs
src/world/: chunk.h  world.cpp  world.h
